# Evolutionary-Computing

lab1/: report.md  solution.cpp
lab1/vis/: CMakeLists.txt  main.cpp  tsp_parser.h  tsp_visualizer.h
lab2/: CMakeLists.txt
lab2/data/: sample.tspa
lab2/solutions/: 1A.txt  2A.txt  2A_newlines.txt  2regret-NN-A-weighted-cont.txt  2regret-NN-A-weighted.txt  2regret-NN-A.txt  2regret-NN-B-cont.txt  2regret-NN-B-weighted-cont.txt  2regret-NN-B-weighted.txt  2regret-NN-B.txt  cycle-regret-A.txt  cycle-regret-B.txt  cycle-regret-weighted-A.txt  cycle-regret-weighted-B.txt  cycle_regret_A.txt  cycle_regret_B.txt  cycle_regret_weighted_A.txt  cycle_regret_weighted_B.txt
lab2/src/: main.cpp
lab2/src/problem/: Solution.cpp  TSPAInstance.cpp  TSPAInstance.h
lab2/src/solvers/: NearestNeighbour.cpp  NearestNeighbour.h  RandomSearch.cpp  kRegret.cpp
lab2/src/utils/: SolverRunner.cpp  SolverRunner.h
lab3/: CMakeLists.txt
lab3/solutions/paths/: Cycle_K-Regret_TSPA.txt  Cycle_K-Regret_TSPB.txt  Cycle_K-Regret_Weighted_TSPA.txt  Cycle_K-Regret_Weighted_TSPB.txt  Local_Greedy_Edge_TSPA.txt  Local_Greedy_Edge_TSPB.txt  (+26 more)
lab3/src/: main.cpp
lab4/: CMakeLists.txt
lab4/src/: main.cpp
lab4/src/problem/: TSPAInstance.h
lab4/src/solvers/: LocalGreedy.h  LocalSteepest.cpp  LocalSteepest.h  NearestNeighbourCycle.h  NeighbourSteepest.cpp  NeighbourSteepest.h  kRegret.cpp  kRegretCycle.h  kRegretCycleWeighted.cpp  kRegretCycleWeighted.h
lab5/: CMakeLists.txt
lab5/src/: main.cpp
lab7/: CMakeLists.txt
lab7/src/: main.cpp
lab8/: CMakeLists.txt
lab8/src/: main.cpp
(+46 files in other folders)
